# toolx-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.dev.md  README.md
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
.third_party/mbedtls-3.6.2/build-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Mbed TLS.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  apidoc.vcxproj  apidoc.vcxproj.filters  install_manifest.txt
.third_party/mbedtls-3.6.2/build-x64/cmake/: MbedTLSTargets.cmake
.third_party/mbedtls-3.6.2/build-x64/framework/: INSTALL.vcxproj  INSTALL.vcxproj.filters
.third_party/mbedtls-3.6.2/build-x64/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters
.third_party/mbedtls-3.6.2/build-x64/pkgconfig/: INSTALL.vcxproj  INSTALL.vcxproj.filters  mbedcrypto.pc
.third_party/mbedtls-3.6.2/build-x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
.third_party/mbedtls-3.6.2/build-x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
.third_party/mbedtls-3.6.2/build-x64/x64/Release/INSTALL/: INSTALL.recipe
.third_party/mbedtls-3.6.2/build-x64/x64/Release/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  INSTALL.lastbuildstate
.third_party/mbedtls-3.6.2/build-x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
.third_party/mbedtls-3.6.2/build-x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
.third_party/mbedtls-install-x64/lib/: everest.lib  mbedcrypto.lib  mbedtls.lib  mbedx509.lib  p256m.lib
.third_party/mbedtls-install-x64/lib/cmake/MbedTLS/: MbedTLSTargets.cmake
.third_party/mbedtls-install-x64/lib/pkgconfig/: mbedtls.pc  mbedx509.pc
cmake/: ToolXConfig.cmake.in  cfgtool_cli_contracts.cmake  release_smoke.cmake  toolx_sync_cli_scenario.cmake
docs/: stability.md
examples/: argtool_example.cpp  asyncx_benchmark.cpp  asyncx_example.cpp  asyncx_fsx_bridge_example.cpp  asyncx_httpx_bridge_example.cpp  asyncx_logsys_bridge_example.cpp  cfgtool_example.cpp  cfgx_example.cpp  cfgx_httpx_remote_example.cpp  fsx_example.cpp  hashx_example.cpp  httpx_benchmark.cpp  httpx_example.cpp  logsys_cfgx_configured_example.cpp  logsys_example.cpp  sysx_example.cpp  textcodec_example.cpp  toolx_cli_showcase.cpp  tuix_example.cpp  tuix_showcase.cpp  utils_example.cpp
examples/install_consumer/: CMakeLists.txt  main.cpp
include/: argtool.h  asyncx.h  cfgx.h  fsx.h  hashx.h  httpx.h  logsys.h  resultx.h  sysx.h  textcodec.h  tuix.h  utils.h
reference/: class_cft.cpp  class_cft.h  cmd_console_tools.cpp  cmd_console_tools.h  httpx_closeout_windows.ps1  sysx_stable_v1.md
src/: argtool.cpp  asyncx.cpp  cfgx.cpp  fsx.cpp  hashx.cpp  httpx.cpp  logsys.cpp  sysx.cpp  textcodec.cpp  tuix.cpp  utils.cpp
tests/: argtool_tests.cpp  asyncx_tests.cpp  cfgx_tests.cpp  fsx_tests.cpp  hashx_tests.cpp  httpx_tests.cpp  logsys_tests.cpp  resultx_tests.cpp  sysx_tests.cpp  textcodec_tests.cpp  toolx_integration_tests.cpp  tuix_tests.cpp  utils_tests.cpp
tools/: toolx_sync.cpp
